--- a/views/listefilms.ejs
+++ b/views/listefilms.ejs
@@ -3,7 +3,7 @@
 <h1>Liste film</h1>
 
 <% if (locals.user.role == 'admin') { %>
-        <a href="/ajout/"><button>Ajout</button></a><br><br>
+        <a href="/ajout/"><button>Edition</button></a><br><br>
 <% }; %>
  <a href="/profil"><button>Profil</button></a><br>
 </center>
