--- a/views/headeradmin.ejs
+++ b/views/headeradmin.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ciné</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="ejs.min.js"></script>
     <link href="/style.css" rel="stylesheet" />
 </head>
 <body>
