--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,53 @@
 * {
     box-sizing: border-box;
 }
+html{
+    background: linear-gradient(-98deg, #F7F6CF, #F4CFDF);
+}
 
 section {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    align-items: center;
+    justify-items: center;
+}
+.scroll {
+    margin: 1vw;
+    width: 90%;
+    height: 74vh;
+    scrollbar-color: #5784BA transparent;
+    overflow: auto;
+}
+.detailfilm {
+    margin: 1vw;
+    padding: 1vw;
+    width: 80%;
+    height: 65vh;
+    border-radius: 30px;
+    background: white;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+                rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+                rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+.affichefilm {
+    margin: 1vw;
+    padding: 1vw;
+    border-radius: 2px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px,
+                rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+.description {
+    width: 65%;
+    margin: 1vw;
+    padding: 1vw;
+    border-radius: 15px;
+    color: #F7F6CF;
+    font-size: medium;
+    background: linear-gradient(180deg, #9AC8EB, #5784BA);
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px,
+                rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
 .rating {
@@ -47,13 +90,20 @@ h1 {
 
 ul {
     list-style-type: none;
-    
 }
+
 li {
     margin: 1em;
     padding: 1em;
-    border: 1px solid blue;
     text-align: center;
+    color: #F7F6CF;
+    font-size: x-large;
+    cursor: pointer;
+    border-radius: 66px;
+    background: linear-gradient(65deg, #B6D8F2, #9AC8EB);
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+                rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+                rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 .button {
     align-items: right;
