--- a/views/headeradmin.ejs
+++ b/views/headeradmin.ejs
@@ -11,10 +11,10 @@
 <body>
     <header>
         <nav class="navadmin">
-            <a href="/listefilms/"><button>Liste des Films</button></a>
-            <a href="/creafilm/"><button>Nouveau film</button></a>
-            <a href="/creaacteur/"><button>Nouvel Acteur</button></a>
-            <a href="/creareal/"><button>Nouveau Réalisateur</button></a>
-            <a href="/creagenre/"><button>Nouveau Genre</button></a>
+            <a href="/listefilms"><button>Liste des Films</button></a>
+            <a href="/creafilm"><button>Nouveau film</button></a>
+            <a href="/creaacteur"><button>Nouvel Acteur</button></a>
+            <a href="/creareal"><button>Nouveau Réalisateur</button></a>
+            <a href="/creagenre"><button>Nouveau Genre</button></a>
         </nav>
     </header>
