--- a/views/creafilm.ejs
+++ b/views/creafilm.ejs
@@ -1,73 +1,100 @@
-<% if (locals.user.role == 'admin') { %>
-<%-include ('headeradmin.ejs') %>
-<div class="cadre">
-    <center>
-<h1>Crée un nouveau film</h1>
-<form action="/creafilm" method="post" enctype="multipart/form-data">
-    <label for="titre">Titre :</label><br>
-    <input type="text" id="titre" name="titre" placeholder="titre"><br><br>
-    <label for="realisateur">Réalisateur :</label><br>
-    <select id="realisateur" name="realisateur"><br><br>
-        <% realisateur.forEach( (r) => { %>
-            <option value="<%= r.id_realisateur %>"><%= r.prenom %>&nbsp;<%= r.nom %></option>
-        <% }); %>
-    </select><br><br>
-    <label for="genre">Genre :</label><br>
-    <select id="genre" name="genre">
-        <% genre.forEach( (g) => { %>
-            <option value="<%= g.id_genre %>"><%= g.type %></option>
-        <% }); %>
-    </select><br><br>
-    <label for="description">Description :</label><br>
-    <textarea id="description" name="description" rows="5" cols="50"></textarea><br><br>
-    <label for="affiche">Affiche :</label><br>
-    <input type="file" id="affiche" name="upload"/><br><br><br>
-    <input type="submit" value="Enregistrer">
-</form>
-</center>
-</div>
+<% if (locals.user.role=='admin' ) { %>
 
-<div class="cadre">
-<h1>Modifier les film</h1>
-<% film.forEach( (f) => { %>
-<div class="cadre">
-<h1><%= f.titre %></h1>
-<center>
-    <form action="/modiffilm" method="post" enctype="multipart/form-data">
-        <input type="hidden" name="id" value="<%= f.id_film %>">
-        <label for="titre">Titre :</label><br>
-        <input type="text" name="titre" value="<%= f.titre %>"><br><br>
-        <label for="description">Description :</label><br>
-        <textarea id="description" name="description" rows="7" cols="50"><%= f.description %></textarea><br><br>
-        <label for="realisateur">Realisateur :</label><br>
-        <select name="realisateur">
-            <% realisateur.forEach( (r) => { %>
-                <option value="<%= r.id_realisateur %>"
-                    <% if (r.id_realisateur == film.id_realisateur) {%> selected <% }; %>
-                    ><%= r.prenom %>&nbsp;<%= r.nom %></option>
+    <%-include ('headeradmin.ejs') %>
+        <section class="creasec">
+            <div class="creadiv">
+                <h1>Crée un nouveau film</h1>
+                <form class="creaform" action="/creafilm" method="post" enctype="multipart/form-data">
+                    <div class="griddiv griddiv1">
+                        <label for="titre">Titre :</label><br>
+                        <input type="text" id="titre" name="titre" placeholder="titre"><br><br>
+                    </div>
+                    <div class="griddiv griddiv2">
+                        <label for="realisateur">Réalisateur :</label><br>
+                        <select id="realisateur" name="realisateur"><br><br>
+                            <% realisateur.forEach( (r)=> { %>
+                                <option value="<%= r.id_realisateur %>">
+                                    <%= r.prenom %>&nbsp;<%= r.nom %>
+                                </option>
+                                <% }); %>
+                        </select><br><br>
+                    </div>
+                    <div class="griddiv griddiv3">
+                        <label for="genre">Genre :</label><br>
+                        <select id="genre" name="genre">
+                            <% genre.forEach( (g)=> { %>
+                                <option value="<%= g.id_genre %>">
+                                    <%= g.type %>
+                                </option>
+                                <% }); %>
+                        </select><br><br>
+                    </div>
+                    <div class="griddiv griddiv4">
+                        <label for="description">Description :</label><br>
+                        <textarea id="description" name="description" rows="8" cols="50"></textarea>
+                    </div>
+                    <div class="griddiv griddiv5">
+                        <label for="affiche">Affiche :</label><br>
+                        <input type="file" id="affiche" name="upload" />
+                    </div>
+                    <div class="griddiv griddiv6">
+                        <input type="submit" value="Enregistrer">
+                    </div>
+                </form>
+            </div>
+
+            <h1>Modifier les film</h1>
+            <% film.forEach( (f)=> { %>
+                <div class="creadiv">
+                    <h1><%= f.titre %></h1>
+                    <form class="creaform" action="/modiffilm" method="post" enctype="multipart/form-data">
+                        <div class="griddiv griddivmod1">
+                            <input type="hidden" name="id" value="<%= f.id_film %>">
+                            <label for="titre">Titre :</label><br>
+                            <input type="text" name="titre" value="<%= f.titre %>"><br><br>
+                        </div>
+                        <div class="griddiv griddivmod2">
+                            <label for="description">Description :</label><br>
+                            <textarea id="description" name="description" rows="7"
+                                cols="50"><%= f.description %></textarea><br><br>
+                        </div>
+                        <div class="griddiv griddivmod3">
+                            <label for="realisateur">Realisateur :</label><br>
+                            <select name="realisateur">
+                                <% realisateur.forEach( (r)=> { %>
+                                    <option value="<%= r.id_realisateur %>" <% if
+                                        (r.id_realisateur==film.id_realisateur) {%> selected <% }; %>
+                                        ><%= r.prenom %>&nbsp;<%= r.nom %></option><% }); %></select>
+                            <br><br>
+                        </div>
+                        <div class="griddiv griddivmod4">
+                        <label for="genre">Genre :</label><br>
+                            <select name="genre">
+                                <% genre.forEach( (g)=> { %>
+                                    <option value="<%= g.id_genre %>" <% if (g.id_genre==film.id_genre) {%> selected
+                                        <% }; %>
+                                            ><%= g.type %>
+                                    </option>
+                                    <% }); %>
+                            </select>
+                            <br><br>
+                        </div>
+                        <div class="griddiv griddivmod5">
+                            <img class="affichefilm" src="/uploads/<%= f.affiche %>" width="240" height="320"><br><br>
+                            <label for="affiche">Affiche :</label>
+                            <input type="file" id="affiche" name="upload" /><br><br><br>
+                        </div>
+                        <div class="griddiv griddivmod6">
+                            <input type="submit" name="actionto" value="Modifier"><br><br>
+                            <input type="submit" name="actionto" value="Supprimer">
+                        </div>
+                    </form>
+                </div>
             <% }); %>
-        </select>
-        <br><br>
-        <label for="genre">Genre :</label><br>
-        <select name="genre">
-            <% genre.forEach( (g) => { %>
-                <option value="<%= g.id_genre %>"
-                    <% if (g.id_genre == film.id_genre) {%> selected <% }; %>
-                    ><%= g.type %></option>
-            <% }); %>
-        </select>
-        <br><br>
-        <img src="/uploads/<%= f.affiche %>" width="240" height="320"><br><br>
-        <label for="affiche">Affiche :</label>
-        <input type="file" id="affiche" name="upload"/><br><br><br>
-        <input type="submit" name="actionto" value="Modifier"><br><br>
-        <input type="submit" name="actionto" value="Supprimer">
-    </form>
-</center>
-</div>
-<% }); %>
-</div>
+
+        </section>
 <% } else { %>
     <p>Tu n'as rien a faire là !</p>
 <% } %>
+
 <%-include ('footer.ejs') %>
