--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,6 +10,6 @@
 <body>
     <header>
         <nav class="navadmin">
-            <a href="/listefilms/"><button>Liste des Films</button></a><br><br>
+            <a href="/listefilms"><button>Liste des Films</button></a><br><br>
         </nav>
     </header>
